# comfyui_prompt_widget

./: LICENSE  Prompt_Preset_List.json  README.md  __init__.py  config.json  llm_expand_node.py  pyproject.toml  routes.py  translate_node.py
.github/workflows/: publish_action.yml
lib/: __init__.py  baidutranslation.py  cache.py  colors.py
web/: prompt_widget.js  style.css
