[project]
name = "comfyui_prompt_widget" 
description = "A prompt widget that can implement functions such as translation, expansion, presets, and history in any multi-line input box."
version = "1.0.0" 
license = { file = "LICENSE.txt" }
dependencies  = [] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/yawiii/comfyui_prompt_widget"

[tool.comfy]
PublisherId = "yawiii" 
DisplayName = "comfyUI_Prompt_Widget" 
Icon = "" 